--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.25",
     "bootstrap": "^5.1.3",
     "build": "^0.1.4",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
