--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "build": "^0.1.4",
     "firebase": "^9.8.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -30,7 +31,8 @@
     "react-toastify": "^9.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
