--- a/AppMobile/package.json
+++ b/AppMobile/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.1"
+    "react-native": "0.69.1",
+    "react-native-svg": "^12.4.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
